<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/home_fragment">

    <fragment
        android:id="@+id/home_fragment"
        android:name="com.gg.busStation.ui.fragment.HomeFragment"
        android:label="@string/home_title"
        tools:layout="@layout/fragment_home"/>
    <fragment
        android:id="@+id/search_fragment"
        android:name="com.gg.busStation.ui.fragment.SearchFragment"
        android:label="@string/search_title"
        tools:layout="@layout/fragment_search"/>
    <fragment
        android:id="@+id/about_fragment"
        android:name="com.gg.busStation.ui.fragment.AboutFragment"
        android:label="@string/about_title"
        tools:layout="@layout/fragment_about"/>

</navigation>